--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" src="style.css">
+    <title>CalmAI</title>
 </head>
 <body>
-<h1>OI</h1>
+    <div class="row">
+        <div class="col-12">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sobre</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inscrições</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Blog</a>
+                </li>
+              </ul>
+        </div>
+    </div>
+    <div class="container">
+        
+    </div>
+    
 </body>
 </html>
