--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h5>Contagem regressiva</h5>
+                <div class="cronometro">
+                    <h5>CONTAGEM REGRESSIVA</h5>
+                    <p id="demo"></p>
+                </div>                
             </div>
         </div>
         
