--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
     <!-- Início div Container -->
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="cronometro">
-                    <h5>CONTAGEM REGRESSIVA</h5>
-                    <p id="demo"></p>
-                </div>                
+            <div class="col-6">
+                <h5>Contagem regressiva</h5>
+                <div class="contagem"></div>
+                <div class="texto">WEBINAR | Gerenciamento de Pessoas:</div>
+                <div class="texto2"></div>
+                <div class="texto3">O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de desenvolvimento contínuo. Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para que empresas consigam manter seus colaboradores saudáveis e engajados. A saúde e bem-estar são fatores essenciais para o desenvolvimento de profissionais. Sobre o que iremos falar: - Novas práticas para saúde do colaborador; - Tecnologias para gerenciamento de benefícios de saúde; - Porque precisamos falar de saúde mental com colaboradores; - Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</div>
             </div>
+            </div>
+            <div class="col-6">
+                <div class="verde"></div>
+                
         </div>
         
     <!-- Fim da div Container -->
