--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
         
     <!-- Fim da div Container -->
     </div>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
