--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             </div>
             <div class="col-6">
-                <div class="verde"></div>
+                <div class="verde"><div class="texto4">Ao vivo, online e gratuito!</div>
                 
         </div>
         
