--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" src="/assets/css/style.css">
+    <link rel="stylesheet" src="https://www.calmai.ml/assets/css/style.css">
     <title>CalmAI</title>
 </head>
-<body>
+<body class="fundo">
     <!-- Barra de navegação - navbar -->
     <div class="row">
         <div class="col-12">
