--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         
     <!-- Fim da div Container -->
     </div>
-<script src="assets/js/script.js"></script>
+<script src="https://www.calmai.ml/assets/js/script.js"></script>
 </body>
 </html>
