--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <div class="form-group">
                         <input type="text" class="form-control" id="empresa"  placeholder="Empresa" required>
                       </div>
-                    <button type="submit" class="btn btn-primary">PARTICIPE</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">PARTICIPE</button>
                   </form>
             
             </div>
@@ -108,5 +108,10 @@
     <!-- Fim da div Container -->
     </div>
 <script src="https://www.calmai.ml/assets/js/script.js"></script>
+    <!-- JavaScript (Opcional) -->
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
