--- a/index.html
+++ b/index.html
@@ -10,24 +10,19 @@
 </head>
 <body class="fundo">
     <!-- Barra de navegação - navbar -->
-    <div class="row">
-        <div class="col-12">
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Inscrições</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Blog</a>
-                </li>
-              </ul>
-        </div>
-    </div>
+ <div class="row">
+    <nav class="navbar">
+      <div class="col-6">
+        <a class="navbar-brand" href="#">
+          <img src="assets/images/Frame.png" width="200" height="65" alt="">
+        </a>
+      </div>
+      <div class="col-6 d-flex justify-content-right">
+        <h4>Redes Sociais</h4>
+      </div>
+    </nav>
+
+  </div>
     
     <!-- Início div Container -->
     <div class="container">
