--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <div class="col-6 d-flex justify-content-right">
-          <!-- <h4>redes sociais</h4>-->
+          <h4>redes sociais</h4>
       </div>
     </nav>
 
