--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="col-6">
         <a class="navbar-brand" href="#">
-          <img src="./images/Frame.png" width="200" height="65" alt="">
+          <img src=".assets/images/Frame.png" width="200" height="65" alt="">
         </a>
       </div>
       <div class="col-6 d-flex justify-content-right">
