--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <title>CalmAI</title>
 </head>
 <body class="fundo">
+  <div class='container'>
     <!-- Barra de navegação - navbar -->
  <div class="row">
     <nav class="navbar">
       <div class="col-6">
         <a class="navbar-brand" href="#">
-          <img src="./images/Frame.png" width="200" height="65" alt="">
+          <img src="./images/Frame.png" width="200" height="65" alt="LogoCalmAi">
         </a>
       </div>
       <div class="col-6 d-flex justify-content-right">
@@ -65,7 +66,7 @@
               <div class="form-group">
                 <input type="text" class="form-control" id="empresa" placeholder="Empresa" required>
               </div>
-              <button type="submit" class="btn btn-primary">PARTICIPE</button>
+              <button type="submit" class="btn btn-success active btn-block">PARTICIPE</button>
             </form>
           </div>
           
@@ -73,7 +74,9 @@
     
           <!-- Fim da div Container -->
         </div>
-<script src="https://www.calmai.ml/assets/js/script.js"></script>
+  </div>
+  </div>
+  <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
