--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <div class='container'>
     <!-- Barra de navegação - navbar -->
  <div class="row">
-    <nav class="navbar">
-      <div class="col-6">
+    
+      <div class="navbar col-12">
         <a class="navbar-brand" href="#">
           <img src="./assets/Frame.png" width="200" height="65" alt="">
         </a>
       </div>
-      <div class="col-6 d-flex justify-content-right">
-          <h4>redes sociais</h4>
+      <div class="col-12 d-flex justify-content-right">
+          
       </div>
     </nav>
 
