--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
     <!-- Início div Container -->
     <div class="row">
-      <div class="col-6">
+      <div class="col-6" id="content">
         <div class="texto1">WEBINAR | Gerenciamento de Pessoas:</div>
         <div class="texto2">Inovação, saúde e bem-estar em pandemia</div>
         <div class="texto3">O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
@@ -39,12 +39,12 @@
         <br>A saúde e bem-estar são fatores essenciais
         para o desenvolvimento de profissionais. 
         <br>Sobre o que iremos falar: 
-        <ol> 
+        <ul> 
           <li>Novas práticas para saúde do colaborador;</li> 
           <li>Tecnologias para gerenciamento de benefícios de saúde;</li> 
           <li>Porque precisamos falar de saúde mental com colaboradores;</li>
           <li>Exercícios para fazer em casa (Yoga, Meditação, Alongamentos)</li>
-        </ol>
+        </ul>
         </div>
       </div>
       <div class="col-6">
