--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>CalmAI</title>
 </head>
 <body class="fundo">
-  <div class='container'>
+<div class='container-fluid'>
     <!-- Barra de navegação - navbar -->
  <div class="row">
     <nav class="navbar">
@@ -25,28 +25,44 @@
 
   </div>
   
-    <!-- Início div Container -->
     <div class="row">
       <div class="col-6">
         <div class="texto1">WEBINAR | Gerenciamento de Pessoas:</div>
+        <br>
         <div class="texto2">Inovação, saúde e bem-estar em pandemia</div>
+        <br>
         <div class="texto3">O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
         desenvolvimento contínuo. 
-        <br>Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
+        <br>
+        <br>
+        Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
         desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para que
         empresas consigam manter seus colaboradores saudáveis e engajados. 
-        <br>A saúde e bem-estar são fatores essenciais
+        <br>
+        <br>
+        A saúde e bem-estar são fatores essenciais
         para o desenvolvimento de profissionais. 
-        <br>Sobre o que iremos falar: 
-        <ol> 
+        <br>
+        <br>
+        Sobre o que iremos falar: 
+        <ul class="a"> 
           <li>Novas práticas para saúde do colaborador;</li> 
           <li>Tecnologias para gerenciamento de benefícios de saúde;</li> 
           <li>Porque precisamos falar de saúde mental com colaboradores;</li>
           <li>Exercícios para fazer em casa (Yoga, Meditação, Alongamentos)</li>
-        </ol>
+        </ul>
         </div>
+        <br>
+        <div class='convidados'>Convidados</div>
+        <br>
+        <div class="col-6"><img src="" alt="depo1">
+        <br>
+        <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
+        </div>
+        <div class="col-6"><img src="" alt="depo2"></div>
+        <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
       </div>
-      <div class="col-6">
+       <div class="col-6">
         <div class="row" id="rowCronometro">
           <div class="col-12 d-flex justify-content-center">
             <div class="cronometro">
@@ -78,11 +94,9 @@
           </div>
           
           </div>
-    
-          <!-- Fim da div Container -->
-        </div>
+      </div>
   </div>
-  </div>
+</div>
   <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
