--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>CalmAI</title>
 </head>
 <body class="fundo">
-<div class='container-fluid'>
+<div class='container'>
     <!-- Barra de navegação - navbar -->
  <div class="row">
     <nav class="navbar">
