--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-6"><img src="" alt="depo2"></div>
         <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
       </div>
-       <div class="col-6">
+       <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
         <div class="row" id="rowCronometro">
           <div class="col-12 d-flex justify-content-center">
             <div class="cronometro">
