--- a/index.html
+++ b/index.html
@@ -26,24 +26,20 @@
   
     <div class="row">
       <div class="col-6" id="content">
-        <div class="texto1">WEBINAR | Gerenciamento de Pessoas:</div>
+        <div class="texto1"><h1>WEBINAR | Gerenciamento de Pessoas:</h1></div>
         <br>
-        <div class="texto2">Inovação, saúde e bem-estar em pandemia</div>
+        <div class="texto2"><h3>Inovação, saúde e bem-estar em pandemia</h3></div>
         <br>
-        <div class="texto3">O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
-        desenvolvimento contínuo. 
+        <div class="texto3"><p>O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
+        desenvolvimento contínuo.</p>
         <br>
-        <br>
-        Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
+        <p>Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
         desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para que
-        empresas consigam manter seus colaboradores saudáveis e engajados. 
-        <br>
-        <br>
-        A saúde e bem-estar são fatores essenciais
-        para o desenvolvimento de profissionais. 
-        <br>
-        <br>
-        Sobre o que iremos falar: 
+        empresas consigam manter seus colaboradores saudáveis e engajados.</p>
+        <br>        
+        <p>A saúde e bem-estar são fatores essenciais para o desenvolvimento de profissionais.</p>
+        <br>        
+        <p>Sobre o que iremos falar:</p>
         <ul class="a"> 
           <li>Novas práticas para saúde do colaborador;</li> 
           <li>Tecnologias para gerenciamento de benefícios de saúde;</li> 
@@ -52,7 +48,7 @@
         </ul>
         </div>
         <br>
-        <div class='convidados'>Convidados</div>
+        <div class='convidados'><h2>Convidados</h2></div>
         <br>
         <div class="col-6"><img src="" alt="depo1">
         <br>
