--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
         <br>
         <div class='convidados'><h2>Convidados</h2></div>
         <br>
-        <div class="col-6"><img src="" alt="depo1">
+        <div class="col-6"><img src="" alt="depo1"></div>
         <br>
-        <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
-        </div>
+        <div><p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
         <div class="col-6"><img src="" alt="depo2"></div>
-        <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p>
+        <p class="depo">O gerenciamento de pessoas passar por mudanças regulares e é uma prática que precisa.</p></div>
       </div>
        <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
         <div class="row" id="rowCronometro">
