--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
     <div class="row">
       <div class="col-6" id="content">
-        <div class="texto1"><h1>WEBINAR | Gerenciamento de Pessoas:</h1></div>
+          <div class="texto1"><h1>WEBINAR | </br>Gerenciamento de Pessoas:</h1></div>
         <br>
         <div class="texto2"><h3>Inovação, saúde e bem-estar em pandemia</h3></div>
         <br>
