--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class='container'> 
   
     <div class="row">
-      <div class="col-6" id="content">
+      <div class="col-lg-6 col-md-12 col-sm-12" id="content">
           <div class="texto1"><h1>WEBINAR | </br>Gerenciamento de Pessoas:</h1></div>
         <br>
         <div class="texto2"><h3>Inovação, saúde e bem-estar em pandemia</h3></div>
