--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li>Exercícios para fazer em casa (Yoga, Meditação, Alongamentos)</li>
         </ul>
         </div>
-        
+    </div>
         
        <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
         <div class="row" id="rowCronometro">
