--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>CalmAI</title>
 </head>
 <body class="fundo">
-  <!-- Barra de navegação - navbar -->
+  
+    
+<div class='container-fluid'> 
+    <!-- Barra de navegação - navbar -->
     <div class="row">  
       <div class="navbar col-12">
         <a class="navbar-brand" href="#">
@@ -21,8 +24,6 @@
       </div>   
      </div>
     <!-- Fim do navbar-->
-    
-<div class='container'> 
   
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" id="content">
