--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>CalmAI</title>
 </head>
-<body class="fundo">
+<body class="container-fluid">
   
-    
-<div class='container-fluid'> 
     <!-- Barra de navegação - navbar -->
     <div class="row">  
       <div class="navbar col-12">
@@ -24,6 +22,9 @@
       </div>   
      </div>
     <!-- Fim do navbar-->
+    
+<div class='container-fluid'> 
+
   
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" id="content">
