--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </div>
     <!-- Fim do navbar-->
     
-<div class='container-fluid'> 
+<div class='container'> 
 
   
     <div class="row">
