--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>CalmAI</title>
 </head>
-<body class="container-fluid">
+<body class="fundo">
   
     <!-- Barra de navegação - navbar -->
     <div class="row">  
