--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" id="content">
-        <div class="texto1">WEBINAR | Gerenciamento de Pessoas:</div>
+        <!--<div class="texto1">WEBINAR | Gerenciamento de Pessoas:</div>
       <div class="texto2"></div>
       <div class="texto3">O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
         desenvolvimento contínuo. Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
@@ -37,7 +37,7 @@
         para o desenvolvimento de profissionais. Sobre o que iremos falar: - Novas práticas para saúde do colaborador; -
         Tecnologias para gerenciamento de benefícios de saúde; - Porque precisamos falar de saúde mental com
         colaboradores; - Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</div>
-      </div>
+      </div>-->
          
         
        <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
