--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         empresas consigam manter seus colaboradores saudáveis e engajados. A saúde e bem-estar são fatores essenciais
         para o desenvolvimento de profissionais. Sobre o que iremos falar: - Novas práticas para saúde do colaborador; -
         Tecnologias para gerenciamento de benefícios de saúde; - Porque precisamos falar de saúde mental com
-        colaboradores; - Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</div>
-      </div>-->
+        colaboradores; - Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</div>-->
+      </div>
          
         
        <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
