--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
           <div class="row" id="formulario">
           <div class="col-12">
-            <div class="texto4 d-flex justify-content-center"><h3>Ao vivo, online e gratuito!</h3></div>
+            <h3 class="texto4>Ao vivo, online e gratuito!</h3>
             <form>
               <div class="form-group">
     
