--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
           <div class="row" id="formulario">
           <div class="col-12">
-            <h3 class="texto4>Ao vivo, online e gratuito!</h3>
+            <h3 class="texto4">Ao vivo, online e gratuito!</h3>
             <form>
               <div class="form-group">
     
