Add pixels Facebook

--- a/index.html
+++ b/index.html
@@ -8,24 +8,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>CalmAI</title>
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '657518645122962');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=657518645122962&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
+  
 </head>
 <body class="fundo">
-  
-    <!-- Barra de navegação - navbar -->
+       <!-- Barra de navegação - navbar -->
     <div class="row">  
       <div class="navbar col-12">
         <a class="navbar-brand" href="#">
-          <img src="assets/images/Frame.png" width="174" height="68" alt="">
+          <img src="assets/images/Frame.png" width="174" height="80" alt="Logo">
         </a>
       </div>
-      <div class="col-12 d-flex justify-content-right">
-      </div>   
+      <div class="col-12 d-flex justify-content-right"></div>   
      </div>
     <!-- Fim do navbar-->
     
 <div class='container'>
-
-
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" id="content">
         <div class="texto1">
@@ -37,7 +51,6 @@
           <h2>Inovação, saúde e bem-estar em pandemia</h2>
         </div>
         <div class="texto3">
-
           <p>O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
             desenvolvimento contínuo. </br></br>Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
             desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para
@@ -51,8 +64,6 @@
               <li>Porque precisamos falar de saúde mental com colaboradores;</li>
               <li>Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</li>
             </ul>
-            
-  
         </div>
       </div>
 
@@ -72,18 +83,13 @@
             <h3 class="texto4">Ao vivo, online e gratuito!</h3>
           </div>
           <div class="col-12">
-
             <form>
               <div class="form-group">
-
                 <input type="text" class="form-control" id="nome" placeholder="Nome" required>
-
               </div>
               <div class="form-group">
-
                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Digite seu email"
                   required>
-
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" id="empresa" placeholder="Empresa" required>
@@ -91,11 +97,10 @@
               <button type="submit" class="btn btn-success active btn-block">PARTICIPE</button>
             </form>
           </div>
-
         </div>
       </div>
     </div>
-  </div>
+</div>
   <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
