--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
     <!--End Hotjar Pixel Code-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171693175-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-171693175-1');
+    </script>
+    <!--End Analytics Pixel Code-->
 </head>
 <body class="fundo">
        <!-- Barra de navegação - navbar -->
