--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>CalmAI</title>
-    
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2c0ed8a2424e8ad525143fc28/22615ade34f34dc3d097aec62.js");</script>
 </head>
 <body class="fundo">
     <!-- Barra de navegação - navbar -->
