--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             empresas consigam manter seus colaboradores saudáveis e engajados.</br></br>A saúde e bem-estar são fatores essenciais
             para o desenvolvimento de profissionais. </br></br>
             
-            Sobre o que iremos falar: - Novas práticas para saúde do colaborador;</p>
+            Sobre o que iremos falar:</p>
             <ul>
+               <li><i class="fa fa-check" aria-hidden="true"></i> Novas práticas para saúde do colaborador; </li>
               <li><i class="fa fa-check" aria-hidden="true"></i> Tecnologias para gerenciamento de benefícios de saúde; </li>
               <li><i class="fa fa-check" aria-hidden="true"></i> Porque precisamos falar de saúde mental com colaboradores;</li>
               <li><i class="fa fa-check" aria-hidden="true"></i> Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</li>
