redirecionamento p/ thank you page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="form-group">
                 <input type="text" class="form-control" id="empresa" placeholder="Empresa" required>
               </div>
-              <button type="submit" class="btn btn-success active btn-block">PARTICIPE</button>
+              <button onclick="window.open('thankYou.html');" type="submit" class="btn btn-success active btn-block">PARTICIPE</button>
             </form>
           </div>
         </div>
