--- a/thankYou.html
+++ b/thankYou.html
@@ -13,7 +13,7 @@
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="thankYou.css">
+    <link rel="stylesheet" href="assets\thankYou.css" />
     <meta name="description" content="Confirmação de presença no WEBINAR | Gerenciamento de Pessoas: inovação,saúde e bem-estar em pandemia - CalmAI">
 
 
