--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div>                  
                   <input type="email" name="email" class="input" placeholder="Digite seu melhor email" required>
                 </div>                       
-                <input name="redirectTo" type="hidden" value="https://www.calmai.ml/thankYou.html" />           
+                <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" />          
                 <div class="clear"><input type="submit" value="Participe" name="Participe" id="botao_live" class="btn btn-success active btn-block"></div>
               </div>
               </form>
