--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"><input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> </div>
+		<div class="response" id="mce-success-response" style="display:none">window.open('https://calmai.ml/thankYou.html'); </div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c0ed8a2424e8ad525143fc28_fb0d4c8144" tabindex="-1" value=""></div>
         <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> 
