--- a/index.html
+++ b/index.html
@@ -89,11 +89,31 @@
               </div>
               </form>
             </div>
+            <div class="texto-spam">
+              Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você 
+            </div>
           </div>
+        </div>              
         </div>
-      </div>
     </div>
   </div>
+  <footer>
+    <div class="row" id='footer'>
+      <div class="col-md-3">
+        <address>
+          <strong>Endereço</strong><br>
+          Avenida Paulista, 1523<br> São Paulo, SP<br>
+          Tel:(11) 0000-0000
+        </address>
+      </div>
+      <div class="col-md-6">
+        <span class='copy'> © 2020 CalmAI, Inc.</span>
+      </div>
+      <div class="col-md-3">        
+        <img src="assets/images/Frame.png" alt="Logo">
+      </div>      
+    </div>
+  </footer>
   <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
