--- a/index.html
+++ b/index.html
@@ -130,29 +130,17 @@
               max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
               min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
             });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup--> 
-            <!--  <form action="https://calmai.us10.list-manage.com/subscribe/post?u=2c0ed8a2424e8ad525143fc28&amp;id=fb0d4c8144" method="post" class="validate">
-              <div>                  
-                <div>                  
-                  <input type="text" name="nome" class="input" placeholder="Digite seu nome completo" required>
-                </div>
-                <div>                  
-                  <input type="email" name="email" class="input" placeholder="Digite seu melhor email" required>
-                </div>                       
-                         
-                <div class="clear"><input type="submit" value="Participe" name="Participe" id="botao_live" class="btn btn-success active btn-block"></div>
-              </div>
-              </form>
+            <!--End mc_embed_signup--> 
             </div>
             <div class="texto-spam">
-              Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você 
+              Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você.
             </div>
           </div>
         </div>              
-        </div>
+      </div>
     </div>
   </div>
-  !--> 
+  
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
