--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="row" id="rowCronometro">
           <div class="col-12 d-flex justify-content-center">
             <div class="cronometro">
+              <h4>Data do Evento: <strong>Dia 9 de Julho, as 19 horas </strong></h4>
               <h5>CONTAGEM REGRESSIVA</h5>
               <p id="demo"></p>
             </div>
