--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       </div>
                       <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"><type='text/javascript'>window.open('https://calmai.ml/thankYou.html');</script> </div>
+                        <div class="response" id="mce-success-response" style="display:none"><type='text/javascript'></script> </div>
                       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c0ed8a2424e8ad525143fc28_fb0d4c8144" tabindex="-1" value=""></div>
                       <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> 
@@ -145,8 +145,9 @@
   window.onbeforeunload = confirmExit;
   function confirmExit()
   {
-    return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?";
+    return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?"window.open('https://www.calmai.ml/thankYou.html'); ;
   }
+     
 </script>
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
