--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c0ed8a2424e8ad525143fc28_fb0d4c8144" tabindex="-1" value=""></div>
                       <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> 
-                      <div class="clear"><input type="submit" value="Participe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                      <div class="clear"><input type="submit" value="Participe" name="subscribe" id="mc-embedded-subscribe" onmouseout="xau()" class="button"></div>
                     </div>
               </form>
             </div>
@@ -145,8 +145,11 @@
   window.onbeforeunload = confirmExit;
   function confirmExit()
   {
-    return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?"window.open('https://www.calmai.ml/thankYou.html'); ;
+    return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?" ;
   }
+   function xau() {
+ window.open('http://www.calmai.ml/thankYou.html');
+}   
      
 </script>
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
