--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                       <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                       <div class="mc-field-group">
                         <label for="mce-FNAME">Nome </label>
-                        <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                        <input type="text" value="" name="FNAME" class="" id="mce-FNAME" required>
                       </div>
                       <div class="mc-field-group">
                         <label for="mce-EMAIL">Digite seu email  <span class="asterisk">*</span>
