--- a/thankYou.html
+++ b/thankYou.html
@@ -42,6 +42,14 @@
             </div>
         </div>
         <div class="row">
+            <div id="telegram" class="col-12">
+                <a href="" id="telegram-share-btt" rel="nofollow" target="_blank" class="telegram-share-button"></a>
+                <p>
+                    Participe de nosso grupo de networking no Telegram 
+                </p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-12 text-center pt-5">
                 <a href="" id="whatsapp-share-btt" rel="nofollow" target="_blank" class="whatsapp-share-button"></a>
                 <a href="" id="twitter-share-btt" rel="nofollow" target="_blank" class="twitter-share-button"></a>
