--- a/thankYou.html
+++ b/thankYou.html
@@ -82,7 +82,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             var url = encodeURIComponent('https://www.calmai.ml/'); //url
             var title = encodeURIComponent(document.title); //título
-            var telegramLink = 'https://telegram.me/share/url?url=' + url + '&text=' + title;
+            var telegramLink = 'https://t.me/calmai/url/share/url?url=' + url + '&text=' + title;
             document.getElementById("telegram-share-btt").href = telegramLink;
         }, false);
 
