--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="shortcut icon" href="./assets/images/icone.png">
     <title>CalmAI</title>
     <!--MailChimp-->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2c0ed8a2424e8ad525143fc28/22615ade34f34dc3d097aec62.js");</script>
@@ -77,7 +78,7 @@
           </div>
           <div class="col-12">
             <div id="box_form">
-                <!-- Begin Mailchimp Signup Form -->
+            <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
             <style type="text/css">
               #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -131,27 +132,43 @@
               max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
               min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
             });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup--> 
+            <!--End mc_embed_signup-->                
             </div>
             <div class="texto-spam">
               Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você.
             </div>
           </div>
-        </div>              
+        </div>                      
       </div>
     </div>
   </div>
+  <footer>
+    <div class="row" id='footer'>
+      <div class="col-md-3">
+        <address>
+          <strong>Endereço</strong><br>
+          Avenida Paulista, 1523<br> São Paulo, SP<br>
+          Tel:(11) 0000-0000
+        </address>
+      </div>
+      <div class="col-md-6">
+        <span class='copy'> © 2020 CalmAI, Inc.</span>
+      </div>
+      <div class="col-md-3">        
+        <img src="assets/images/calmAI-logo.png" alt="Logo">
+      </div>      
+    </div>
+  </footer>
   <script language="JavaScript">
-  window.onbeforeunload = confirmExit;
-  function confirmExit()
-  {
-    return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?" ;
-  }
-   function xau() {
- window.open('http://www.calmai.ml/thankYou.html');
-}   
-     
-</script>
+    window.onbeforeunload = confirmExit;
+    function confirmExit()
+    {
+      return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?" ;
+    }
+     function xau() {
+   window.open('http://www.calmai.ml/thankYou.html');
+  }     
+  </script>
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
