--- a/thankYou.html
+++ b/thankYou.html
@@ -18,7 +18,7 @@
 
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>CalmAI - WEBINAR</title>
+    <title>WEBINAR | Gerenciamento de Pessoas: Inovação, saúde e bem-estar em pandemia</title>
 </head>
 
 <body>
