--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <div id="mc_embed_signup">
               <form action="https://calmai.us10.list-manage.com/subscribe/post?u=2c0ed8a2424e8ad525143fc28&amp;id=fb0d4c8144" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                      <h2>Subscribe</h2>
-                      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                      <h2>Inscrição</h2>
+                      <div class="indicates-required"><span class="asterisk">*</span> Campos obrigatórios</div>
                       <div class="mc-field-group">
                         <label for="mce-FNAME">Nome </label>
                         <input type="text" value="" name="FNAME" class="" id="mce-FNAME" required>
