--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Você quer aprender mais sobre inovação com inteligência artificial, saúde e bem-estar, não perca tempo e venha fazer parte do CalmAI."/>
+    <meta name="keywords" content="Webinar | Gerenciamento de pessoas"/>
+    <meta name="title" content="Webinar | Gerenciamento de Pessoas: inovação,saúde e bem-estar em pandemia."/>
+    <meta name="author" content="CalmAI"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
