--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="row" id="menuNav">
     <div class="navbar col-12">
 
-      <img src="assets/images/Frame.png" width="174" height="68" alt="">
+      <img src="assets/images/Frame.png"width="174" height="68" alt="Logo" class="img-fluid">
 
     </div>
     <div class="col">
@@ -52,9 +52,7 @@
           <p>O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
             desenvolvimento contínuo. </br></br>Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
             desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para
-            que
-            empresas consigam manter seus colaboradores saudáveis e engajados.</br></br>A saúde e bem-estar são fatores essenciais
-            para o desenvolvimento de profissionais. </br></br>
+            que empresas consigam manter seus colaboradores saudáveis e engajados.</br></br>
             
             Sobre o que iremos falar:</p>
             <ul>
@@ -82,7 +80,7 @@
           </div>
           <div class="col-12">
             <div id="box_form">
-            <!-- Begin Mailchimp Signup Form -->
+              <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
             <style type="text/css">
               #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -136,7 +134,7 @@
               max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
               min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
             });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup-->                
+            <!--End mc_embed_signup-->             
             </div>
             <div class="texto-spam">
               Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você.
@@ -159,7 +157,7 @@
         <span class='copy'> © 2020 CalmAI, Inc.</span>
       </div>
       <div class="col-md-3">        
-        <img src="assets/images/calmAI-logo.png" alt="Logo">
+        <img src="assets/images/calmAI-logo.png" alt="Logo" class="img-fluid">
       </div>      
     </div>
   </footer>
