--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c0ed8a2424e8ad525143fc28_fb0d4c8144" tabindex="-1" value=""></div>
                       <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> 
-                      <div class="clear"><input type="submit" value="Participe" name="subscribe" id="mc-embedded-subscribe" onclick="xau()" class="button"></div>
+                      <div class="clear"><input type="submit" value="Participe" name="subscribe" id="mc-embedded-subscribe" onclick="xau()" class="btn btn-block"></div>
                     </div>
               </form>
             </div>
