--- a/index.html
+++ b/index.html
@@ -45,24 +45,21 @@
          <h1 class="texto1">
             WEBINAR |</br>Gerenciamento de Pessoas:
           </h1> 
-          <h2 class="texto2">Inovação, saúde e bem-estar em pandemia</h2>
-       
+          <h2 class="texto2">Inovação, saúde e bem-estar em pandemia</h2>       
         <div class="texto3">
-
           <p>O gerenciamento de pessoas passa por mudanças regulares e é uma prática que precisa de
             desenvolvimento contínuo. </br></br>Com o surgimento da pandemia, fomos inseridos em um novo cenário extremamente
             desafiador para o mercado como um todo. Novas práticas e metodologias inovadoras precisam ser aplicadas para
             que empresas consigam manter seus colaboradores saudáveis e engajados.</br></br>
             
-            Sobre o que iremos falar:</p>
+            Sobre o que iremos falar durante o Webinar:</p>
             <ul>
-               <li><i class="fa fa-check" aria-hidden="true"></i> Novas práticas para saúde do colaborador; </li>
-              <li><i class="fa fa-check" aria-hidden="true"></i> Tecnologias para gerenciamento de benefícios de saúde; </li>
-              <li><i class="fa fa-check" aria-hidden="true"></i> Porque precisamos falar de saúde mental com colaboradores;</li>
-              <li><i class="fa fa-check" aria-hidden="true"></i> Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</li>
-            </ul>         
- 
-        </div>
+               <li><i class="fa fa-check" aria-hidden="true" ></i> Novas práticas para saúde do colaborador; </li>
+              <li><i class="fa fa-check" aria-hidden="true" ></i> Tecnologias para gerenciamento de benefícios de saúde; </li>
+              <li><i class="fa fa-check" aria-hidden="true" ></i> Porque precisamos falar de saúde mental com colaboradores;</li>
+              <li><i class="fa fa-check" aria-hidden="true" ></i> Exercícios para fazer em casa (Yoga, Meditação, Alongamentos);</li>
+            </ul>       
+         </div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12" id="colunaDois">
         <div class="row" id="rowCronometro">
