--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1150272978663987');
     fbq('track', 'PageView');
+    fbq('track', 'Lead');
     </script>
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=1150272978663987&ev=PageView&noscript=1"
     /></noscript>
-    <!-- End Facebook Pixel Code -->
-  
+    <!-- End Facebook Pixel Code -->  
     <!--Analytics-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171693175-1"></script><script>window.dataLayer=window.dataLayer || []; function gtag(){dataLayer.push(arguments);}gtag('js', new Date()); gtag('config', 'UA-171693175-1');</script>
     <!--Hotjar-->
@@ -44,12 +44,9 @@
       <!-- Barra de navegação - navbar -->
   <div class="row" id="menuNav">
     <div class="navbar col-12">
-
       <img src="assets/images/Frame.png"width="190" height="80" alt="Logo" class="img">
-
     </div>
-    <div class="col">
-      
+    <div class="col">      
     </div>
     <!-- <div class="col-12 d-flex justify-content-right">
     </div> -->
@@ -93,69 +90,16 @@
           </div>
           <div class="col-12">
             <div id="box_form">
-              <!-- Begin Mailchimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-              #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-              /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
-            <div id="mc_embed_signup">
-              <form action="https://calmai.us10.list-manage.com/subscribe/post?u=2c0ed8a2424e8ad525143fc28&amp;id=fb0d4c8144" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                      <h2>Inscrição</h2>
-                      <div class="indicates-required"><span class="asterisk">*</span> Campos obrigatórios</div>
-                      <div class="mc-field-group">
-                        <label for="mce-FNAME">Nome </label>
-                        <input type="text" value="" name="FNAME" class="" id="mce-FNAME" required>
-                      </div>
-                      <div class="mc-field-group">
-                        <label for="mce-EMAIL">Digite seu email  <span class="asterisk">*</span>
-                      </label>
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                      </div>
-                      <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"><type='text/javascript'></script> </div>
-                      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2c0ed8a2424e8ad525143fc28_fb0d4c8144" tabindex="-1" value=""></div>
-                      <input name="redirectTo" type="hidden" value="https://calmai.ml/thankYou.html" /> 
-                      <div class="clear"><input type="submit" value="Participe" name="subscribe" id="mc-embedded-subscribe" onclick="xau()" class="button"></div>
-                    </div>
-              </form>
-            </div>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email'; /**
-            * Translated default messages for the $ validation plugin.
-            * Locale: PT_PT
-            */
-            $.extend($.validator.messages, {
-              required: "Campo de preenchimento obrigat&oacute;rio.",
-              remote: "Por favor, corrija este campo.",
-              email: "Por favor, introduza um endere&ccedil;o eletr&oacute;nico v&aacute;lido.",
-              url: "Por favor, introduza um URL v&aacute;lido.",
-              date: "Por favor, introduza uma data v&aacute;lida.",
-              dateISO: "Por favor, introduza uma data v&aacute;lida (ISO).",
-              number: "Por favor, introduza um n&uacute;mero v&aacute;lido.",
-              digits: "Por favor, introduza apenas d&iacute;gitos.",
-              creditcard: "Por favor, introduza um n&uacute;mero de cart&atilde;o de cr&eacute;dito v&aacute;lido.",
-              equalTo: "Por favor, introduza de novo o mesmo valor.",
-              accept: "Por favor, introduza um ficheiro com uma extens&atilde;o v&aacute;lida.",
-              maxlength: $.validator.format("Por favor, n&atilde;o introduza mais do que {0} caracteres."),
-              minlength: $.validator.format("Por favor, introduza pelo menos {0} caracteres."),
-              rangelength: $.validator.format("Por favor, introduza entre {0} e {1} caracteres."),
-              range: $.validator.format("Por favor, introduza um valor entre {0} e {1}."),
-              max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
-              min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
-            });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup-->             
-            </div>
+                            
+            </div>                       
+          </div>
             <div class="texto-spam">
               Pode ficar tranquilo! <strong>Não</strong> enviaremos nenhum <strong>SPAM</strong> para você.
             </div>
-          </div>
-        </div>                      
-      </div>
+        </div>
+      </div>                      
     </div>
+  </div>
   </div>
   <footer>
     <div class="row" id='footer'>
@@ -173,17 +117,7 @@
         <img src="assets/images/calmAI-logo.png" alt="Logo" class="img-fluid">
       </div>      
     </div>
-  </footer>
-  <script language="JavaScript">
-    window.onbeforeunload = confirmExit;
-    function confirmExit()
-    {
-      return "Se você fechar o navegador, seus dados serão perdidos. Deseja Realmente sair?" ;
-    }
-     function xau() {
-   window.open('http://www.calmai.ml/thankYou.html');
-  }     
-  </script>
+  </footer>  
     <script src="https://www.calmai.ml/assets/js/script.js"></script>
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
